Fix episode summary overlapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,7 @@ img.link-icon[data-theme="dark"] {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 /* .episode-info > div {
